objects/Package__c.object
<CustomObject>
    <label>Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>DEmo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DEmo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <label>Phone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>serial_No__c</fullName>
        <displayFormat>{00}</displayFormat>
        <label>serial No</label>
        <type>AutoNumber</type>
    </fields>
</CustomObject>